[package]
name = "rollping"
version = "0.1.1"
edition = "2024"
authors = ["William Bradley"]
license = "MIT"
description = "A ping time statistics aggregator."
homepage = "https://github.com/wbbradley/rollping"
repository = "https://github.com/wbbradley/rollping"
readme = "README.md"
keywords = ["ping", "networking", "statistics", "aggregator"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
flate2 = "1.0.36"
maxminddb = "0.26.0"
rand = "0.9.2"
reqwest = { version = "0.12.14", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surge-ping = "0.8.3"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
